# nap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FindSDL2.cmake  Findassimp.cmake  Findfreeimage.cmake  Findglm.cmake  build.bat  build.py  build.sh  buildxcode.sh  check_build_environment.bat  check_build_environment.sh  configure.cmake  generateCodeBlocksProject.sh  generateLinuxMakefiles.py  generateVSProject.bat  generateVSSolution.bat  generateXCodeProject.sh  generate_solution.bat  generate_solution.sh  installdependencies.py  installdependencies.sh  nap-config.cmake  nap.editorconfig  package.bat  package.py  package.sh  package_app.bat  package_app.sh  qt.cmake  qtpost.cmake  qtpre.cmake  readme.md  solution_info.json  temp.txt  tmp.txt
apps/artnetcolor/: CMakeLists.txt  project.json
apps/aura/: CMakeLists.txt  project.json
apps/etherdream/: CMakeLists.txt  project.json
apps/kalvertoren/: CMakeLists.txt  project.json  sensor_config.txt
apps/skeleton/: CMakeLists.txt  project.json
apps/steef/: CMakeLists.txt  project.json
cmake/qt_checker/: CMakeLists.txt
core/: CMakeLists.txt  napcore.vcxproj  napcore.vcxproj.filters
core/py/: gui.py
core/src/: nap.h
coreapp/: CMakeLists.txt
coreapp/resources/: scriptserver.json
coreapp/src/: main.cpp  scriptserver.json
demos/audioanalysis/: CMakeLists.txt  app.json  config.json  project.json
demos/audioplayback/: CMakeLists.txt  app.json  config.json  project.json
demos/blobtrace/: CMakeLists.txt  app.json  pathmapping.json  project.json
demos/computeflocking/: CMakeLists.txt  app.json  project.json  service_config.json
demos/dynamicgeo/: CMakeLists.txt  app.json  project.json  regenerate.bat
demos/lineblending/: CMakeLists.txt  project.json
demos/pipins/: CMakeLists.txt  project.json
demos/sequenceraudio/: CMakeLists.txt  project.json
demos/videomodulation/: CMakeLists.txt  app.json  project.json
demos/vinyl/: CMakeLists.txt  app.json  project.json
modules/napapp/: CMakeLists.txt  module.json
modules/napartnet/: CMakeLists.txt  module.json  modulePostBuildPerProject.cmake
napkin/: CMakeLists.txt  README  __init__.py  __main__.py  appcontext.py  iconstore.py  nap.py  napkin.vcxproj  napkin.vcxproj.filters
napkin/core_native/: nap.py
napkin/core_py/: nap.py
napkin/coresettings/: corewidget.py
napkin/generic/: basewindow.py  butils.py  fileselectorwidget.py  filtertreeview.py  leaffilterproxymodel.py  proxystyle.py  qbasewindow.py  qtutils.py  searchablepopuplist.py
napkin/legacy/: nap.py
napkin/log/: logpanel.py
napkin/napkin/: actions.py  appcontext.py  iconstore.py  main.py  mainwindow.py  make_napkin_executable.bat
napkin/outline/: attributevaluedelegate.py  model.py  outlinewidget.py
napkin/patch/: _plugitem.py  edgeitem.py  graphscene.py  graphview.py  inoutnodeitem.py  inputoutputnodeitem.py  layeritem.py  nodeitem.py  operator.py  patcheditor.py  patchscene.py  patchutils.py  patchview.py  pinitem.py  socketitem.py  wirepreview.py
napkin/pynap/: guitest.py  logpanel.py  main.py  models.py  naputils.py  notes.md  propertypanel.py  resourcepanel.py  servicepanel.py  typehierarchypanel.py
napkin/pynap_json/: actions.py  constants.py  executablepanel.py  inspectorpanel.py  main.py  napjsonwrap.py  objectpanel.py  outlinepanel.py  proppanel.py  typehierarchypanel.py
napkin/resources/: mainresources.qrc  objects.json  resources.rc
napkin/schema/: generateschema.py  napschema-mockup.json  napschema.json  rendertestobjects.nap.json  test_schema_valid.nap.json
napkin/src/: actions.cpp  actions.h  actionstore.h  appcontext.cpp  appcontext.h  apprunnerpanel.cpp  apprunnerpanel.h  commands.cpp  commands.h  document.cpp  document.h  fcurvemodel.cpp  fcurvemodel.h  filetype.cpp  filetype.h  hierarchypanel.cpp  hierarchypanel.h  historypanel.h  iconstore.h  inspectorpanel.cpp  inspectorpanel.h  itemtypes.h  logpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  napgeneric.cpp  napgeneric.h  napkin_utilities.cpp  napkin_utilities.h  napkinfiltertree.cpp  napkinglobals.h  napkinresources.h  naputils.cpp  naputils.h  outlinepanel.cpp  outlinepanel.h  resourcefactory.cpp  resourcefactory.h  standarditemsgeneric.h  (+13 more)
napkin/src_old/: actions.cpp  commands.h  mainwindow.ui  objectregistry.cpp  objectregistry.h
napkin/test/: colors.html  patchpanel.py  server.py  test.json  testpatch.py  tests.py
napkin/tools/: prepareresources.py
napkin/utils/: butils.py  qtutils.py  viewicons.py
napkin_cpp/: CMakeLists.txt
napkin_cpp/resources/: mainresources.qrc  objects.json
napkin_cpp/src/: actions.cpp  actions.h  appcontext.cpp  appcontext.h  commands.cpp  commands.h  globals.h  hierarchypanel.cpp  hierarchypanel.h  historypanel.cpp  inspectorpanel.cpp  inspectorpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  napgeneric.cpp  outlinepanel.cpp  outlinepanel.h  proppanel.cpp  proppanel.h  typeconversion.cpp  typeconversion.h  widgetdelegate.cpp  widgetdelegate.h
napkin_cpp/src_old/: actionstore.cpp  appcontext.cpp  commands.cpp  main.cpp
napqt/: CMakeLists.txt
napqt/src/: napqt-resources.h
nrender/: .gitignore  CMakeLists.txt  Findfreeimage.cmake  README.md  configure.cmake  generateVSProject.bat  nrender.vcxproj  nrender.vcxproj.filters  targetarch.cmake
nrender/src/: nbackbufferrendertarget.cpp  nbackbufferrendertarget.h  nbitmap.cpp  nbitmap.h  nbitmaputils.cpp  nbitmaputils.h  nbuffer.cpp  nbuffer.h  ncamera.cpp  ncamera.h  ndrawutils.cpp  ndrawutils.h  nframebuffer.cpp  nframebuffer.h  ngltypes.cpp  ngltypes.h  nglutils.cpp  nglutils.h  ngpumesh.cpp  ngpumesh.h  nimage.cpp  nimage.h  nindexbuffer.cpp  nindexbuffer.h  nindexcontainer.cpp  nindexcontainer.h  nmesh.cpp  nmesh.h  nopengl.h  nrendertarget.cpp  nrendertarget.h  nsamplerdeclaration.h  nsdlgl.cpp  nsdlgl.h  nshader.cpp  nshader.h  nshaderutils.cpp  nshaderutils.h  ntexture.cpp  ntexture.h  (+19 more)
qt/: CMakeLists.txt
qt/demo/: main.cpp
qt/resources/: napqt-resources.qrc
qt/src/: napqt-resources.h
rtti/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/src/: catch.hpp  (+13 more)
utility/: CMakeLists.txt
(+5768 files in other folders)
